src/test/ui/feature-gates/feature-gate-impl_trait_in_fn_trait_return.rs
fn f() -> impl Fn() -> impl Sized { || () }
//~^ ERROR `impl Trait` not allowed within `Fn` trait return
fn g() -> &'static dyn Fn() -> impl Sized { &|| () }
//~^ ERROR `impl Trait` not allowed within `Fn` trait return

fn main() {}
